# tell-me-in-your-words

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
backend/: cli.py  config.py  container.py  main.py
backend/agents/: __init__.py  consult.py  domain_router.py  explainer.py  followup.py  intent_recovery.py  llm_fallback.py
backend/data/: terms.json
backend/models/: __init__.py  api.py
backend/orchestrator/: __init__.py  orchestrator.py  session.py
backend/services/: cache.py  care_navigation.py  knowledge_base.py  llm_client.py
docs/: ARCHITECTURE.md  MVP_PLAN.md  PRODUCT.md
frontend/: app.py  session_store.py
frontend/components/: explain_dialog.py
tests/: conftest.py  test_agents.py  test_care_navigation.py  test_container.py  test_intent.py  test_llm_fallback.py  test_orchestrator.py
