[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tell-me-in-your-words"
version = "0.2.0"
description = "Intent recovery before expert guidance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "streamlit==1.41.1",
    "rapidfuzz==3.14.5",
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",
]

[project.scripts]
tmiyw = "backend.cli:main"

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]

[tool.vercel]
entrypoint = "backend.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
